--- a/addons/admob/plugin.cfg
+++ b/addons/admob/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
-name="AdMob API"
-description="The AdMob API  of  Plugin for Android and iOS."
+name="AdMob"
+description="The AdMob of  Plugin for Android and iOS."
 author="Poing Studios"
-version="0.0.1"
-script="scripts/admob_api.gd"
+version="0.0.2"
+script="scripts/AdMob.gd"
