--- a/addons/admob/plugin.cfg
+++ b/addons/admob/plugin.cfg
@@ -3,5 +3,5 @@
 name="AdMob"
 description="The AdMob of  Plugin for Android and iOS."
 author="Poing Studios"
-version="0.0.2"
-script="scripts/AdMob.gd"
+version="0.0.4"
+script="AdMob.gd"
