--- a/addons/admob/plugin.cfg
+++ b/addons/admob/plugin.cfg
@@ -4,4 +4,4 @@ name="AdMob"
 description="The AdMob of  Plugin for Android and iOS."
 author="Poing Studios"
 version="1.0.0"
-script="AdMob.gd"
+script="src/core/AdMob.gd"
