--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,4 @@
-/.gitattributes     export-ignore
-/.github            export-ignore
-/.gitignore         export-ignore
-/LICENSE            export-ignore
-/README.md          export-ignore
+**/**       export-ignore
+
+addons      !export-ignore
+addons/**   !export-ignore
