--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
-**/**       export-ignore
+# Normalize EOL for all files that Git considers text files.
+* text=auto eol=lf
 
-addons      !export-ignore
-addons/**   !export-ignore
+# Ignore everything outside of the addons folder when exporting.
+/**        export-ignore
+/addons    !export-ignore
+/addons/** !export-ignore
