--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -11,6 +11,18 @@ jobs:
     runs-on: "ubuntu-latest"
 
     steps:
+    - uses: actions/checkout@v3
+    
     - name: Echo test
       run: echo "test"
+    
+    - name: Compress .zip
+      run: |
+        ls
+        zip -r compress.zip ./
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v3.1.1
+        path: compress.zip
+        
 
