--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -21,6 +21,7 @@ jobs:
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
-      path: compress.zip
+      with:
+        path: compress.zip
         
 
