--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Compress .zip
       run: |
         ls
-        zip -r compress.zip ./
+        git archive --format=zip --output compress.zip HEAD
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
