--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,6 +13,10 @@ jobs:
       with:
         fetch-depth: 0
 
+
+    - name: Get branch name
+      run: echo ${GITHUB_REF##*/}
+      
     - uses: paulhatch/semantic-version@v5.0.0
       id: version
       with:
