--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,8 +15,8 @@ jobs:
 
 
     - name: Get branch name
-      run: echo ${GITHUB_REF##*/}
-      
+      run: echo ${{ github.head_ref }}
+
     - uses: paulhatch/semantic-version@v5.0.0
       id: version
       with:
