--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,11 +16,11 @@ jobs:
 
     - name: Define Godot version based on branch name
       run: |
-        GODOT_VERSION=""
+        GODOT_VERSION="${{ github.base_ref }}"
 
-        if [ ${{ github.base_ref }} = "master" ]; then
+        if [ "${{ github.base_ref }}" = "master" ]; then
           GODOT_VERSION=4.0
-        elif [ ${{ github.base_ref }} = "3.5" ]; then
+        elif [ "${{ github.base_ref }}" = "3.5" ]; then
           GODOT_VERSION=3.5
         fi
 
@@ -40,7 +40,7 @@ jobs:
 
     - name: Uncompress .zip to Artifact
       run: |
-        unzip compress.zip -d zip_extract_folder
+        unzip compress.zip -d zip_extract_folder/
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
