--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -45,5 +45,5 @@ jobs:
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
       with:
-        name: godot-${{env.CURRENT_GODOT_VERSION}}-admob-editor-${{ steps.version.outputs.version }}
+        name: godot-${{env.GODOT_VERSION}}-admob-editor-${{ steps.version.outputs.version }}
         path: zip_extract_folder/
