--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -19,9 +19,9 @@ jobs:
         GODOT_VERSION="${{ github.base_ref }}"
 
         if [ "${{ github.base_ref }}" = "master" ]; then
-          GODOT_VERSION=4.0
+          GODOT_VERSION=4
         elif [ "${{ github.base_ref }}" = "3.5" ]; then
-          GODOT_VERSION=3.5
+          GODOT_VERSION=3
         fi
 
         echo "GODOT_VERSION=${GODOT_VERSION}" >> $GITHUB_ENV
@@ -32,7 +32,7 @@ jobs:
         tag_prefix: "v"
         major_pattern: "BREAKING CHANGE:"
         minor_pattern: "feat:"
-        version_format: "testv${major}.${minor}.${patch}-alpha.${increment}"
+        version_format: "v${major}.${minor}.${patch}-alpha.${increment}"
 
     - name: Compress .zip
       run: |
