--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -29,12 +29,10 @@ jobs:
     - uses: paulhatch/semantic-version@v5.0.0
       id: version
       with:
-        tag_prefix: ""
+        tag_prefix: "v"
         major_pattern: "BREAKING CHANGE:"
         minor_pattern: "feat:"
         version_format: "v${major}.${minor}.${patch}-alpha.${increment}"
-        change_path: "."
-        namespace: "vvvv"
 
     - name: Compress .zip
       run: |
