--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -31,6 +31,8 @@ jobs:
       id: version
       with:
         tag_prefix: "v"
+        use_branches: "true"
+        branch: "3.5"
         major_pattern: "BREAKING CHANGE:"
         minor_pattern: "feat:"
         version_format: "v${major}.${minor}.${patch}-alpha.${increment}"
