--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,14 +25,12 @@ jobs:
         fi
 
         echo "GODOT_VERSION=${GODOT_VERSION}" >> $GITHUB_ENV
-        echo "TAG_PREFIX=godot${GODOT_VERSION}-v" >> $GITHUB_ENV
+        echo "TAG_PREFIX=godot${GODOT_VERSION}/v" >> $GITHUB_ENV
 
     - uses: paulhatch/semantic-version@v5.0.0
       id: version
       with:
-        tag_prefix: "v"
-        use_branches: "true"
-        branch: "master"
+        tag_prefix: "${{env.GODOT_VERSION}}"
         major_pattern: "BREAKING CHANGE:"
         minor_pattern: "feat:"
         version_format: "v${major}.${minor}.${patch}-alpha.${increment}"
