--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -30,7 +30,7 @@ jobs:
     - uses: paulhatch/semantic-version@v5.0.0
       id: version
       with:
-        tag_prefix: "${{env.GODOT_VERSION}}"
+        tag_prefix: "v"
         major_pattern: "BREAKING CHANGE:"
         minor_pattern: "feat:"
         version_format: "v${major}.${minor}.${patch}-alpha.${increment}"
