--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -42,10 +42,9 @@ jobs:
 
         perl -pi -e "s/$REGEX_FIND_VERSION_TO_CHANGE_CONTENT_MD_FILE/${{ steps.version.outputs.version }}/g" addons/admob/plugin.cfg
 
-        cat addons/admob/plugin.cfg
     - name: Compress .zip
       run: |
-        git archive --format=zip --output compress.zip HEAD
+        git archive --format=zip --output compress.zip `git stash create`
 
     - name: Uncompress .zip to Artifact
       run: |
