--- a/.github/workflows/manual_release_version.yml
+++ b/.github/workflows/manual_release_version.yml
@@ -50,15 +50,15 @@ jobs:
 
         cat addons/admob/plugin.cfg
 
-    # - name: Git Auto Commit
-    #   uses: stefanzweifel/git-auto-commit-action@v4.15.0
-    #   id: auto-commit-action
-    #   with:
-    #     commit_message: Auto changed version with CI/CD
+    - name: Git Auto Commit
+      uses: stefanzweifel/git-auto-commit-action@v4.15.0
+      id: auto-commit-action
+      with:
+        commit_message: Auto changed versiond with CI/CD
     
-    # - name: Create Release
-    #   uses: ncipollo/release-action@v1.12.0
-    #   with:
-    #     generateReleaseNotes: true
-    #     commit: ${{ steps.auto-commit-action.outputs.commit_hash }}
-    #     tag: ${{env.TAG_PREFIX}}${{ steps.version.outputs.version }}
+    - name: Create Release
+      uses: ncipollo/release-action@v1.12.0
+      with:
+        generateReleaseNotes: true
+        commit: ${{ steps.auto-commit-action.outputs.commit_hash }}
+        tag: ${{env.TAG_PREFIX}}${{ steps.version.outputs.version }}
