--- a/.github/workflows/manual_release_version.yml
+++ b/.github/workflows/manual_release_version.yml
@@ -54,7 +54,7 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4.15.0
       id: auto-commit-action
       with:
-        commit_message: Auto changed versiond with CI/CD
+        commit_message: Auto changed version with CI/CD
     
     - name: Create Release
       uses: ncipollo/release-action@v1.12.0
