fix: TAG_PREFIX rename

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,13 +25,13 @@ jobs:
         fi
 
         echo "GODOT_VERSION=${GODOT_VERSION}" >> $GITHUB_ENV
-        echo "TAG_PREFIX=godot${GODOT_VERSION}-v" >> $GITHUB_ENV
+        echo "TAG_PREFIX=godot${GODOT_VERSION}-" >> $GITHUB_ENV
 
     - name: Get plugin version
       uses: paulhatch/semantic-version@v5.0.0
       id: version
       with:
-        tag_prefix: "${{env.TAG_PREFIX}}"
+        tag_prefix: "${{env.TAG_PREFIX}}v"
         major_pattern: "BREAKING CHANGE:"
         minor_pattern: "feat:"
         version_format: "v${major}.${minor}.${patch}-alpha.${increment}"
