--- a/.github/workflows/manual_release_version.yml
+++ b/.github/workflows/manual_release_version.yml
@@ -57,30 +57,7 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git add .
           git commit -m "Auto changed version with CI/CD"
-          git push
 
           echo "LAST_COMMIT_HASH=$(git log -1 --pretty=format:%H)" >> $GITHUB_ENV
-
-    - name: Create Release
-      uses: ncipollo/release-action@v1.12.0
-      with:
-        generateReleaseNotes: true
-        commit: ${{env.LAST_COMMIT_HASH}}
-        tag: ${{env.PLUGIN_VERSION}}
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-
-    - name: Install requests
-      run: pip install requests
-      
-    - name: Upload new version to Godot Asset Library
-      env:
-        USERNAME: ${{ secrets.ASSET_LIBRARY_USERNAME }}
-        PASSWORD: ${{ secrets.ASSET_LIBRARY_PASSWORD }}
-        VERSION: ${{env.PLUGIN_VERSION}}
-        COMMIT_HASH: ${{env.LAST_COMMIT_HASH}}
-      run: |
-        python3 static/workflow_files/push.py
+    - name: Create Pull Request
+      uses: peter-evans/create-pull-request@v4.2.3
