refactor: move classes to new folder

--- a/addons/admob/plugin.cfg
+++ b/addons/admob/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="AdMob"
-description="The AdMob of Plugin for Android and iOS."
+description="The AdMob Plugin for Android and iOS."
 author="Poing Studios"
-version="v1.0.0"
-script="src/core/AdMob.gd"
+version="v3.0.0"
+script="admob.gd"
