--- a/addons/admob/plugin.cfg
+++ b/addons/admob/plugin.cfg
@@ -3,5 +3,5 @@
 name="AdMob"
 description="The AdMob of Plugin for Android and iOS."
 author="Poing Studios"
-version="godot3-v1.3.2"
+version="v1.3.4"
 script="src/core/AdMob.gd"
