--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,3 +1,3 @@
 patreon: poingstudios
 ko_fi: poingstudios
-custom: ["https://www.paypal.com/donate/?hosted_button_id=EBUVPEGF4BUR8", paypal]
+custom: ["https://www.paypal.com/donate/?hosted_button_id=EBUVPEGF4BUR8"]
