docs: add attribution to Google

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,4 +57,4 @@ extra:
     - icon: fontawesome/brands/github
       link: https://github.com/Poing-Studios
 copyright: |
-  &copy; 2023-present <a href="https://github.com/Poing-Studios/godot-admob-plugin"  target="_blank" rel="noopener">Poing Studios</a>
+  &copy; 2023-present <a href="https://github.com/Poing-Studios/godot-admob-plugin"  target="_blank" rel="noopener">Poing Studios</a> | Portions of this page are modifications based on work created and <a href="https://developers.google.com/terms/site-policies"  target="_blank" rel="noopener">shared by Google</a> and used according to terms described in the <a href="https://creativecommons.org/licenses/by/4.0/"  target="_blank" rel="noopener">Creative Commons 4.0 Attribution License</a>.
