feat: Bump plugin version to 4.0.0 and update gitignore for VSCode, Android, and iOS.

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ data_*/
 AdMobAddon.csproj
 AdMobAddon.sln
 
+# VSCode specific ignores
+.vscode/
 
+# Android & iOS specific ignores
 android/
 ios/
