--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,9 +48,12 @@ markdown_extensions:
   - pymdownx.mark
   - attr_list
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
 extra:
+  version:
+    provider: mike
+    default: stable
   social:
     - icon: fontawesome/brands/discord
       link: https://discord.com/invite/YEPvYjSSMk
