feat: Make documentation deployment workflow callable and trigger it from manual releases, extracting the version from `plugin.cfg`.

--- a/.github/workflows/manual_release_version.yml
+++ b/.github/workflows/manual_release_version.yml
@@ -57,3 +57,7 @@ jobs:
         COMMIT_HASH: ${{ github.sha }}
       run: |
         python3 static/workflow_files/push.py
+
+  deploy-docs:
+    needs: release-version
+    uses: ./.github/workflows/docs.yml
