--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -5,8 +5,11 @@ on:
       - master
     tags:
       - '*'
+  workflow_call:
+
 permissions:
   contents: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -28,10 +31,8 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
       - name: Deploy documentation
         run: |
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/}
-            VERSION=${VERSION#v}
-            VERSION=$(echo $VERSION | cut -d. -f1,2)
+          if [[ $GITHUB_REF == refs/tags/* ]] || [[ $GITHUB_EVENT_NAME == "workflow_call" ]]; then
+            VERSION=$(grep "version=" addons/admob/plugin.cfg | cut -d'"' -f2 | sed 's/^v//' | cut -d. -f1,2)
             
             mike deploy --push --update-aliases $VERSION stable
             mike set-default --push stable
